--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Odin Battleship</title>
   </head>
-  <body></body>
+  <body>
+    <div class="board" id="player1_board"></div>
+    <div class="board" id="player2_board"></div>
+  </body>
 </html>
