Rendering both boards on screen

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,13 @@
     <title>Odin Battleship</title>
   </head>
   <body>
-    <div class="board" id="player1_board"></div>
-    <div class="board" id="player2_board"></div>
+    <div class="playerContainer" id="player2_container">
+      <h2 class="playerName">Computer</h2>
+      <div class="board"></div>
+    </div>
+    <div class="playerContainer" id="player1_container">
+      <div class="board"></div>
+      <h2 class="playerName">Player 1</h2>
+    </div>
   </body>
 </html>
